chore: add minor fixes forgotten in last PR