@@ -53,6 +53,8 @@ subprojects {
 
     tasks.named('test') {
         useJUnitPlatform()
+
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
     }
 
 }
